--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.2",
     "core-js": "^3.8.3",
     "vue": "^2.6.14"
   },
